# programming-exercises

./: README.md
c/01_hello/: Makefile  hello.c
c/hello/: Makefile
c/shared/: Makefile  main.jl
c/vector_mean/: mean.jl
go/json-api/: .gitignore  Argcfile.sh  README.md  compose.yaml
go/json-api/app/: main.go
go/json-api/test/https/: post.sh
json-api/: Caddyfile  app.dockerfile  docker-compose.yaml  run.sh
json-api/test/https/: get.sh
julia/ccall/: Makefile  mean.jl
julia/ccall/src/: mean.c
julia/multiple_dispatch/: multiple_dispatch.jl
programming/c-copyfile/src/: main.c
programming/c-shared/: Makefile
programming/c-shared/src/: main.c
programming/caddy-docker-server/: Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  main.py  pyproject.toml  requirements.txt
programming/caddy-docker-static-site/: Dockerfile  docker-compose-prod.yml  docker-compose.yml  index.html
programming/caddy-self-signed-certificates/: Caddyfile  README.md  compose.yml
programming/container-build-secrets/: Dockerfile  build.sh  compose.yml  mysecret
programming/go-json-api/: Argcfile.sh  README.md
programming/julia-ccall/: README.md
programming/python-json-api/: .env.example  README.md  main.py  oidc_config.py  test_auth.py  test_main.py
python/simple-json-api/: pyproject.toml  test_oidc.py
tools/patch/: a.patch  diff.sh  patch.sh
web/server-caddy-docker/: Caddyfile.prod  README.md  dev.Caddyfile  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  plan.md
web/static-site-caddy-docker/: README.md  docker-compose.yml
