[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caddy-docker-server"
version = "0.1.0"
description = "A simple FastAPI server containerized with Docker and served through Caddy reverse proxy"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.104.1",
    "uvicorn[standard]>=0.24.0",
]